--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name":"obelisk.js",
     "version":"1.0.2",
-    "description":"JavaScript Engine to Build Pixel Isometric Element with HTML5 Canvas",
+    "description":"JavaScript Engine for Building Pixel Isometric Element with HTML5 Canvas",
     "main":"Gruntfile.js",
     "dependencies":{
         "grunt":"~0.4.1"
@@ -20,6 +20,8 @@
         "url":"https://github.com/rison/obelisk.js.git"
     },
     "keywords":[
+        "javascript",
+        "canvas",
         "pixel",
         "isometric",
         "game",
