--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "gulp-rimraf": "^0.2.0",
     "gulp-uglify": "^1.5.3",
     "require-dir": "^0.3.0",
-    "run-sequence": "^1.1.5",
+    "run-sequence": "1.1.5",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   },
